Se agrego video ejemplo

--- a/Home.html
+++ b/Home.html
@@ -46,6 +46,15 @@
         </div>
     </div>
 </div>
+<video autoplay muted loop id="video">
+    <source src="http://thenewcode.com/assets/videos/polina.webm" type="video/webm">
+    <source src="http://thenewcode.com/assets/videos/polina.mp4" type="video/mp4">
+</video>
+<script>
+    setTimeout(function () {
+        var video = document.getElementById('video').play();
+    }, 150);
+</script>
 
 <!-- Featured -->
 <div id="featured">
