--- a/Home.html
+++ b/Home.html
@@ -47,8 +47,8 @@
     </div>
 </div>
 <video autoplay muted loop id="video">
-    <source src="http://thenewcode.com/assets/videos/polina.webm" type="video/webm">
-    <source src="http://thenewcode.com/assets/videos/polina.mp4" type="video/mp4">
+    <source src="videos/prueba.webm" type="video/webm">
+    <source src="videos/prueba.mp4" type="video/mp4">
 </video>
 <script>
     setTimeout(function () {
