Se agrego la parte de pemsun

--- a/AcercaDe.html
+++ b/AcercaDe.html
@@ -44,9 +44,9 @@
 
                 <!-- Logo -->
                 <div id="logo">
-                   <p style="font-size:17px;font-family:Arial, Helvetica, sans-serif; color:rgba(0,0,0,0.45)">Don’t be afraid of new arenas </p>
+                   <p style="font-size:17px;font-family:Arial, Helvetica, sans-serif; color: #dddddd">Don’t be afraid of new arenas </p>
 
-                    <h2>  Elon Musk </h2>
+                    <h2 style="font-family: Arial, sans-serif;color: #dddddd">  Elon Musk </h2>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                 <section>
                     <p style="visibility:hidden">a</p>
                     <h2 style="text-align:center"><strong>Enterate más</strong></h2>
-                    <h2 style="text-align:center"><a href="#"> Malla Curricular </a></h2>                
+                    <h2 style="text-align:center"><a href="pensun.html" target="_blank"> Malla Curricular </a></h2>
                 </section>
                    </td>
                 </tr>
