Se acomodo algunas cosas del texto en acercaDe

--- a/Home.html
+++ b/Home.html
@@ -29,7 +29,7 @@
                 <li class="active"><a href="AcercaDe.html">Acerca de nosotros</a></li>
                 <li><a href="Noticias.html">Noticias</a></li>
                 <li><a href="Home.html"><img src="images/logoMeca.jpg" alt="IMT" height="70" width="60"> </a></li>
-                <li><a href="Campus.html">Campus</a></li>
+                <li><a href="Campus.html">sas</a></li>
                 <li><a href="Actividades.html">Actividades</a></li>
             </ul>
         </nav>
@@ -40,9 +40,19 @@
         <!-- Logo -->
         <div id="logo">
             <br/>
-            <h1 style="font-size:75px;">Ingeniería Mecatrónica </h1>
+            <h1 style="font-size:75px;">
+                <script type="text/javascript" src="../jquery.js"></script>
+                <script type="text/javascript">
+                    $(document).ready(function () {
+                        setTimeout(function () {
+                            $(".content2").fadeOut(150);
+                        }, 300);
+                    });
+                </script>
+                Ingeniería Mecatrónica
+            </h1>
             <br/>
-            <h1 style="font-size:25px;">Universidad Católica Boliviana "San Pablo"</h1>
+            <h1 style="font-size:25px;">Universidad Católica Boliviana "San Pablo" </h1>
         </div>
     </div>
 </div>
@@ -62,7 +72,9 @@
         <header>
             <h2>Bienvenidos a IMT</h2>
         </header>
-        <p>La carrera de <strong>Ingeniería Mecatrónica</strong> nació de la irrupción de la electrónica en la mecánica.
+        <br/>
+        <p style="font-size: 25px;line-height: 35px;text-align: justify">La carrera de <strong>Ingeniería
+            Mecatrónica</strong> nació de la irrupción de la electrónica en la mecánica.
             Su ámbito de acción está relacionado con la mecánica de precisión, con los sistemas de control electrónicos
             y las tecnologías de información computarizadas.
 
@@ -73,6 +85,7 @@
         </p>
 
         <hr/>
+        <img src="images/mecatronica2.jpg" style="align-content: center;width: 45%;height: 38%"/>
 
     </div>
 </div>
