--- a/pensun.html
+++ b/pensun.html
@@ -22,10 +22,28 @@
     </noscript>
 </head>
 <body style="background: white">
-<div id="nav-wrapper">
-    <img src="images/mecatronica.jpg" style="width: 100%; height: auto;z-index: 10">
+<div id=" nav-wrapper
+">
+    <img src="images/mecatronica.jpg" style="width: 100%; height: auto;z-index: -10">
+    <nav id="nav">
+        <p style="font-size: 20px;">Malla Curricular</p>
+    </nav>
 </div>
-    <p style="font-size: 150px; ">Malla Curricular</p>
+<table border="2" style="border-color: black">
+    <tr>
+        <td>
+    <tr>
+        <td style="visibility: visible" ;>
+            <p>hola</p>
+        </td>
+        <td style=" border-color: black;visibility: visible
+        ">
+            <p>asdfdfdf</p>
+        </td>
+    </tr>
+    </td>
+    </tr>
+</table>
 
 </body>
 </html>
