se creo las noticias y articulos

--- a/Actividades.html
+++ b/Actividades.html
@@ -41,7 +41,7 @@
                         <li class="active"><a href="AcercaDe.html">Acerca de nosotros</a></li>
                         <li><a href="Noticias.html">Noticias</a></li>
                         <li><a href="Home.html"><img src="images/logoMeca.jpg" alt="IMT" height="70" width="60"> </a></li>
-                        <li><a href="Campus.html">Campus</a></li>
+                        <li><a href="Campus.html">Comunidad</a></li>
                         <li><a href="Actividades.html">Actividades</a></li>
 					</ul>
 				</nav>
