--- a/Noticias.html
+++ b/Noticias.html
@@ -1,85 +1,146 @@
 ﻿<!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Noticias</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-        <link rel="shortcut icon" href="images/chip2.ico" />
-		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-panels.min.js"></script>
-		<script src="js/init.js"></script>
-        <script src="https://use.fontawesome.com/ae4bcc040f.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
-		</noscript>
-	</head>
-	<body>
+<head>
+    <title>Noticias</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="description" content=""/>
+    <meta name="keywords" content=""/>
+    <link rel="shortcut icon" href="images/chip2.ico"/>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/skel-panels.min.js"></script>
+    <script src="js/init.js"></script>
+    <script src="https://use.fontawesome.com/ae4bcc040f.js"></script>
+    <noscript>
+        <link rel="stylesheet" href="css/skel-noscript.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="css/style-desktop.css"/>
+    </noscript>
+</head>
+<body>
 
-        <!-- Header -->
-        <div id="header">
-            <div id="nav-wrapper">
-                <!-- Nav -->
-                <nav id="nav">
-                    <ul>
-                        <li class="active"><a href="AcercaDe.html">Acerca de nosotros</a></li>
-                        <li><a href="Noticias.html">Noticias</a></li>
-                        <li><a href="Home.html"><img src="images/logoMeca.jpg" alt="IMT" height="70" width="60"> </a></li>
-                        <li><a href="Campus.html">Campus</a></li>
-                        <li><a href="Actividades.html">Actividades</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="container">
+<!-- Header -->
+<div id="header">
+    <div id="nav-wrapper">
+        <!-- Nav -->
+        <nav id="nav">
+            <ul>
+                <li class="active"><a href="AcercaDe.html">Acerca de nosotros</a></li>
+                <li><a href="Noticias.html">Noticias</a></li>
+                <li><a href="Home.html"><img src="images/logoMeca.jpg" alt="IMT" height="70" width="60"> </a></li>
+                <li><a href="Campus.html">Comunidad</a></li>
+                <li><a href="Actividades.html">Actividades</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="container">
 
-                <!-- Logo -->
-                <div id="logo">
-                    <h1><a href="#"></a></h1>
-                    <span class="tag"></span>
-                </div>
-            </div>
+        <!-- Logo -->
+        <div id="logo">
+            <h1><a href="#"></a></h1>
+            <span class="tag"></span>
         </div>
-        <!-- Header -->
-        <!-- Main -->
-        <div id="main">
-            <div id="content" class="container">
-                <section>
-                    <header>
-                        <h2></h2>
-                        <span class="byline"></span>
-                    </header>
-                    <p></p>
-                    <p></p>
-                </section>
-            </div>
-        </div>
-        <!-- /Main -->
-        <!-- Footer -->
-        <div id="footer">
-            <div class="container">
-                <section>
-                    <header>
-                        <h2>Contáctanos </h2>
-                    </header>
-                    <ul class="contact">
-                        <li class="active"><a href="https://www.facebook.com/mecatronicaUCBscz/" class="fa fa-facebook" target="_blank"><span>Facebook</span></a></li>
-                        <li><a href="https://www.youtube.com/channel/UCidrA3C3RFm_H1Ar8CylKvQ" class="fa fa-youtube" target="_blank"><span>youtube</span></a></li>
-                    </ul>
-                </section>
-            </div>
-        </div>
-        <!-- /Footer -->
-        <!-- Copyright -->
-        <div id="copyright">
-            <div class="container">
-                Design: HOUSTON TECH
-            </div>
-        </div>
+    </div>
+</div>
+<!-- Header -->
+<!-- Main -->
+<div id="main">
+    <div id="content" class="container">
+        <section>
+            <header>
+                <h2>Artículos</h2>
+                <span class="byline"></span>
+            </header>
+            <p></p>
+            <article class="button" style="background: burlywood; width: 80%">
+                  <h1 style="font-size: 20px">Google Chrome</h1>
+                <div><span style="float:left; padding: 15px;"><img src="images/logoMeca.jpg"
+                                                                   style="width: 60px;height: 60px"/></span>
+                      <p style="text-align: justify">Google Chrome is a free, open-source web browser developed by
+                        Google, released in 2008.
+                        dadsdasdasddddddddddddddddddddddddddddddddddddddddddddddddd
+                        ddddddddddddddddddd
+                        d
+                    </p></div>
+                <!--<div><span style="float:right">texto a la derecha</span>texto a la izquierda</div>-->
+            </article>
+            <article class="button" style="background: burlywood; width: 80%">
+                  <h1 style="font-size: 20px">Google Chrome</h1>
+                <div><span style="float:left; padding: 15px;"><img src="images/logoMeca.jpg"
+                                                                   style="width: 60px;height: 60px"/></span>
+                      <p style="text-align: justify">Google Chrome is a free, open-source web browser developed by
+                        Google, released in 2008.
+                        dadsdasdasddddddddddddddddddddddddddddddddddddddddddddddddd
+                        ddddddddddddddddddd
+                        d
+                    </p></div>
+                <!--<div><span style="float:right">texto a la derecha</span>texto a la izquierda</div>-->
+            </article>
+            <p></p>
+        </section>
+        <section>
+            <header>
+                <h2>Noticias</h2>
+                <span class="byline"></span>
+            </header>
+            <table>
+           <td> <article class="button" style="height: 450px;width: 400px;background: white">
+                <img src="images/header.jpg" style="width: 100%;height: 40%; position: static;z-index: -10"/>
+
+                <p class="button1"
+                   style="height: 70%;width: 80%;background: white; border-style: solid; border-color: black; color: darkblue;text-align: justify;transform:translateY(-20%)">
+                    sfsdfsdfs dfsdfsdfdsfdfdf sdfsdfdfa sdfsdf df sdfdf dsf sdf sdf sdfsdfa as fsdf sdf
+                    sd fs sdf sdf gsfgsdfgf fgs fgdfg sf sfgsfg sfgs dfg sfg s </p>
+            </article> </td>
+                <br/>
+                <td> <article class="button" style="height: 450px;width: 400px;background: white">
+                    <img src="images/header.jpg" style="width: 100%;height: 40%; position: static;z-index: -10"/>
+
+                    <p class="button1"
+                       style="height: 70%;width: 80%;background: white; border-style: solid; border-color: black; color: darkblue;text-align: justify;transform:translateY(-20%)">
+                        sfsdfsdfs dfsdfsdfdsfdfdf sdfsdfdfa sdfsdf df sdfdf dsf sdf sdf sdfsdfa as fsdf sdf
+                        sd fs sdf sdf gsfgsdfgf fgs fgdfg sf sfgsfg sfgs dfg sfg s </p>
+                </article> </td>
+                <br/>
+                <td> <article class="button" style="height: 450px;width: 400px;background: white">
+                    <img src="images/header.jpg" style="width: 100%;height: 40%; position: static;z-index: -10"/>
+
+                    <p class="button1"
+                       style="height: 70%;width: 80%;background: white; border-style: solid; border-color: black; color: darkblue;text-align: justify;transform:translateY(-20%)">
+                        sfsdfsdfs dfsdfsdfdsfdfdf sdfsdfdfa sdfsdf df sdfdf dsf sdf sdf sdfsdfa as fsdf sdf
+                        sd fs sdf sdf gsfgsdfgf fgs fgdfg sf sfgsfg sfgs dfg sfg s </p>
+                </article> </td>
+            </table>
+        </section>
+    </div>
+</div>
+</div>
+<!-- /Main -->
+<!-- Footer -->
+<div id="footer">
+    <div class="container">
+        <section>
+            <header>
+                <h2>Contáctanos </h2>
+            </header>
+            <ul class="contact">
+                <li class="active"><a href="https://www.facebook.com/mecatronicaUCBscz/" class="fa fa-facebook"
+                                      target="_blank"><span>Facebook</span></a></li>
+                <li><a href="https://www.youtube.com/channel/UCidrA3C3RFm_H1Ar8CylKvQ" class="fa fa-youtube"
+                       target="_blank"><span>youtube</span></a></li>
+            </ul>
+        </section>
+    </div>
+</div>
+<!-- /Footer -->
+<!-- Copyright -->
+<div id="copyright">
+    <div class="container">
+        Design: HOUSTON TECH
+    </div>
+</div>
 
 
-	</body>
+</body>
 </html>
