--- a/pensun.html
+++ b/pensun.html
@@ -21,7 +21,7 @@
 
     </noscript>
 </head>
-<body style="background: white">
+<body style="background: white;border: 1">
 <div id=" nav-wrapper
 ">
     <img src="images/mecatronica.jpg" style="width: 100%; height: auto;z-index: -10">
