--- a/AcercaDe.html
+++ b/AcercaDe.html
@@ -25,34 +25,39 @@
 <body class="Acerca de nosotros">
 
 <!-- Header -->
-    <div id="header">
-    <img src="images/header.jpg" style="width: 100%;height: auto;z-index: -10;transform: translateX(-50%) translateY(-50%);position: fixed;background-size: cover">
-        <div id="nav-wrapper">
-            <!-- Nav -->
-            <nav id="nav">
-                <ul>
-                    <li class="active"><a href="AcercaDe.html">Acerca de nosotros</a></li>
-                    <li><a href="Noticias.html">Noticias</a></li>
-                    <li><a href="Home.html"><img src="images/logoMeca.jpg" alt="IMT" height="70" width="60"> </a></li>
-                    <li><a href="Campus.html">Campus</a></li>
-                    <li><a href="Actividades.html">Actividades</a></li>
-                </ul>
+<div id="header">
+    <img src="images/header.jpg"
+         style="width: 100%;height: auto;z-index: -10;transform: translateX(-50%) translateY(-50%);position: fixed;background-size: cover">
+    <div id="nav-wrapper">
+        <!-- Nav -->
+        <nav id="nav">
+            <ul>
+                <li class="active"><a href="AcercaDe.html">Acerca de nosotros</a></li>
+                <li><a href="Noticias.html">Noticias</a></li>
+                <li><a href="Home.html"><img src="images/logoMeca.jpg" alt="IMT" height="70" width="60"> </a></li>
+                <li><a href="Campus.html">Comunidad</a></li>
+                <li><a href="Actividades.html">Actividades</a></li>
+            </ul>
 
-            </nav>
-        </div>
-        <div class="container">
+        </nav>
+    </div>
+    <div class="container">
 
-            <!-- Logo -->
-            <!--<div id="logo" style="background: url(../images/header.jpg);background-attachment: fixed>-->
-            <div id="logo">
-                <p style=" font-size:17px;font-family:Arial, Helvetica, sans-serif; color: #dddddd;text-align:
+        <!-- Logo -->
+        <!--<div id="logo" style="background: url(../images/header.jpg);background-attachment: fixed>-->
+        <div id="logo">
+            <p style=" font-size:17px;font-family:Arial, Helvetica, sans-serif; color: #dddddd;text-align:
              right;align-content: flex-end
         ">Don’t be afraid of new arenas </p>
 
-                <h2 style="font-family: Arial, sans-serif;color: #dddddd; text-align: right"> Elon Musk </h2>
-            </div>
+            <h2 style="font-family: Arial, sans-serif;color: #dddddd; text-align: right"> Elon Musk </h2>
         </div>
     </div>
+    </br>
+    </br>
+    </br>
+    </br>
+</div>
 
 <!--      <section>
           <h2 style="align-content:center;color:black">Don’t be afraid of new arenas</h2>
@@ -65,23 +70,35 @@
         <header>
             <h2>Acerca de nosotros</h2>
         </header>
-        <p>
-            <!--falta poner-->
+        <p style="font-size: 20px;color: lightslategray">
+            La carrera de <strong>Ingeniería Mecatrónica</strong> en la Universidad Católica "San Pablo" fue inaugurada el año 2015 en la ciudad de Santa Cruz.
+            La visión de la Universidad Católica "San Pablo" con nuestra carrera es la de formar profesionales de alto nivel, capaces de contribuir al bienestar de la sociedad competente, creativa e íntegra.
+
+            Como sociedad buscamos constantemente mejorar nuestra formación profesional, incentivar la investigación y desarrollar la capacidad de trabajo colectivo.
+
         </p>
+        <br/>
         <header>
             <h2>¿Es para vos?</h2>
         </header>
-        <table border="25px" style="color:black">
+        <table border="25px" style="color: lightslategray">
             <tr>
                 <td>
                     <ul style="font-size: 20px">
-                        <li> &#8226; Aptitud para las matemáticas, la física y ciencias exactas en <span style="visibility: hidden" >ii</span>general.</li>
+                        <li> &#8226; Aptitud para las matemáticas, la física y ciencias exactas en<span
+                                style="visibility: hidden">ii</span>general.
+
+                        </li>
+                        <br/>
                         <li> &#8226; Aptitudes en el uso de la tecnología.</li>
+                        <br/>
                         <li> &#8226; Creatividad e ingenio.</li>
+                        <br/>
                         <li> &#8226; Interés por la tecnología e innovación.</li>
+                        <br/><div><span style="float:right">texto a la derecha</span>texto a la izquierda</div>
                     </ul>
                 </td>
-                <td style="visibility:hidden">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+                <td style="visibility:hidden">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
 
 
                 <td>
@@ -94,8 +111,11 @@
             </tr>
         </table>
         <section>
-        </br>
+            </br>
             <header><h2>¿Dónde podrías trabajar cuando egreses?</h2></header>
+            <p style="font-size: 20px;color: lightslategray">En empresas industriales de cualquier naturaleza, empresas productoras y/o de servicios donde se requiera
+                automatizar los procesos internos. Se desempeña como director de proyecto, gerente, jefe,
+                supervisor, consultor, investigador.</p>
         </section>
     </div>
 </div>
