--- a/Home.html
+++ b/Home.html
@@ -29,7 +29,7 @@
                 <li class="active"><a href="AcercaDe.html">Acerca de nosotros</a></li>
                 <li><a href="Noticias.html">Noticias</a></li>
                 <li><a href="Home.html"><img src="images/logoMeca.jpg" alt="IMT" height="70" width="60"> </a></li>
-                <li><a href="Campus.html">sas</a></li>
+                <li><a href="Campus.html">Comunidad</a></li>
                 <li><a href="Actividades.html">Actividades</a></li>
             </ul>
         </nav>
@@ -118,6 +118,7 @@
         </section>
     </div>
 </div>
+
 <div id="copyright">
     <div class="container">
         Design: HOUSTON TECH
