se intento el uso de slider

--- a/Campus.html
+++ b/Campus.html
@@ -21,7 +21,8 @@
 	<body>
 
         <!-- Header -->
-        <div id="header">
+        <div id="header" >
+            <img id="foto" src="images/header.jpg"/>
             <div id="nav-wrapper">
                 <!-- Nav -->
                 <nav id="nav">
@@ -34,29 +35,27 @@
                     </ul>
                 </nav>
             </div>
-            <div class="container">
 
-                <!-- Logo -->
-                <div id="logo">
-                    <h1><a href="#"></a></h1>
-                    <span class="tag"></span>
-                </div>
-            </div>
-        </div>
+
+
+
         <!-- Header -->
         <!-- Main -->
-        <div id="main">
-            <div id="content" class="container">
-                <section>
-                    <header>
-                        <h2></h2>
-                        <span class="byline"></span>
-                    </header>
-                    <p></p>
-                    <p></p>
-                </section>
-            </div>
+
         </div>
+        <!--<div id="main" style="background: none">-->
+            <!--<div id="content" class="container">-->
+                <div id="art"style="background: red">
+                    <img src="images/header.jpg"style="float: left;width: 500px;height: 120px">
+                    <ul>
+                    <li><span>Revista</span></li>
+                        <li><button><a href="#"> Descubrí más</a></button></li>
+                    </ul>
+                </div>
+ y si lo dejamos ahi?para continuar despues? yes, tomorrow yo creo que si
+        okay, bye
+            <!--</div>-->
+        
         <!-- /Main -->
         <!-- Footer -->
         <div id="footer">
