--- a/Noticias.html
+++ b/Noticias.html
@@ -62,7 +62,8 @@
                         dadsdasdasddddddddddddddddddddddddddddddddddddddddddddddddd
                         ddddddddddddddddddd
                         d
-                    </p></div>
+                    </p>
+                </div>
                 <!--<div><span style="float:right">texto a la derecha</span>texto a la izquierda</div>-->
             </article>
             <article class="button" style="background: burlywood; width: 80%">
@@ -74,10 +75,14 @@
                         dadsdasdasddddddddddddddddddddddddddddddddddddddddddddddddd
                         ddddddddddddddddddd
                         d
-                    </p></div>
+                    </p>
+
+                </div>
                 <!--<div><span style="float:right">texto a la derecha</span>texto a la izquierda</div>-->
             </article>
-            <p></p>
+
+            <p   style="margin:0px 450px "><a href="#">Ver más</a> </p>
+
         </section>
         <section>
             <header>
