--- a/AcercaDe.html
+++ b/AcercaDe.html
@@ -8,8 +8,17 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <link rel="shortcut icon" href="images/chip2.ico"/>
+    <!--nuevas cosas agregadas-->
+    <link rel="stylesheet" href="css/nivo-slider.css" type="text/css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
+    <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(window).on('lload', function() {
+            $('#slider').nivoSlider();
+        });
+    </script>
+<!--hasta aqui se modifico cosas-->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/skel.min.js"></script>
     <script src="js/skel-panels.min.js"></script>
     <script src="js/init.js"></script>
@@ -19,6 +28,7 @@
         <link rel="stylesheet" href="css/skel-noscript.css"/>
         <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="css/style-desktop.css"/>
+
     </noscript>
 </head>
 
@@ -26,8 +36,8 @@
 
 <!-- Header -->
 <div id="header">
-    <img src="images/header.jpg"
-         style="width: 100%;height: auto;z-index: -10;transform: translateX(-50%) translateY(-50%);position: fixed;background-size: cover">
+    <img id="foto" src="images/header.jpg"
+         >
     <div id="nav-wrapper">
         <!-- Nav -->
         <nav id="nav">
@@ -44,7 +54,6 @@
     <div class="container">
 
         <!-- Logo -->
-        <!--<div id="logo" style="background: url(../images/header.jpg);background-attachment: fixed>-->
         <div id="logo">
             <p style=" font-size:17px;font-family:Arial, Helvetica, sans-serif; color: #dddddd;text-align:
              right;align-content: flex-end
@@ -95,7 +104,7 @@
                         <li> &#8226; Creatividad e ingenio.</li>
                         <br/>
                         <li> &#8226; Interés por la tecnología e innovación.</li>
-                        <br/><div><span style="float:right">texto a la derecha</span>texto a la izquierda</div>
+                        <br/>
                     </ul>
                 </td>
                 <td style="visibility:hidden">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
@@ -119,11 +128,21 @@
         </section>
     </div>
 </div>
-
-
-<!-- Tweet -->
-
-
+<!--<div class="slider">-->
+    <!--<ul>-->
+        <!--<li><img src="images/prueba3.jpg"></li>-->
+        <!--<li><img src="images/prueba1.jpg"></li>-->
+        <!--<li><img src="images/prueba2.jpg"></li>-->
+        <!--<li><img src="images/prueba4.jpg"></li>-->
+    <!--</ul>-->
+<!--</div>-->
+<!--Slider-->
+<div id="slider" class="nivoSlider">
+    <img src="images/1.jpg" alt="" />
+    <img src="images/3.jpg" alt="" title="#htmlcaption" />
+    <img src="images/4.jpg" alt="" title="This is an example of a caption" />
+    <img src="images/2.jpg" alt="" />
+</div>
 <!-- Footer -->
 <div id="footer">
     <div class="container">
