la parte de campus se avanzo y se modifico la parte de noticias y articulos la parte del slide no se pude instalar correctamente pero en futuras cosas se modificara

--- a/Campus.html
+++ b/Campus.html
@@ -45,15 +45,28 @@
         </div>
         <!--<div id="main" style="background: none">-->
             <!--<div id="content" class="container">-->
-                <div id="art"style="background: red">
-                    <img src="images/header.jpg"style="float: left;width: 500px;height: 120px">
-                    <ul>
-                    <li><span>Revista</span></li>
-                        <li><button><a href="#"> Descubrí más</a></button></li>
-                    </ul>
+
+                <div id="art">
+                    <div id="caja1"> <img src="images/header.jpg"style="float: left;width: 100%;height:100%"></div>
+                    <div id="caja2">
+                        <div id="center">
+                            <p>Revista</p>
+                          <button style="background-color: black; padding: 15px 13px 20px 13px;">  <a href="#" style="color: white; font-size: 15px; "> Descubrí más ></a> </button>
+
+                        </div>
+                    </div>
+                    </div>
+
+        <div id="art1">
+            <div id="caja3"> <img src="images/2.jpg"style="float: right;width: 100%;height:100%"></div>
+            <div id="caja4">
+                <div id="center1" >
+                    <p>Centro Interno</p>
+                    <button style="background-color: black; padding: 15px 13px 20px 13px;">  <a href="#" style="color: white; font-size: 15px; "> Descubrí más ></a> </button>
+
                 </div>
- y si lo dejamos ahi?para continuar despues? yes, tomorrow yo creo que si
-        okay, bye
+            </div>
+        </div>
             <!--</div>-->
         
         <!-- /Main -->
