--- a/Noticias.html
+++ b/Noticias.html
@@ -46,17 +46,19 @@
 <!-- Header -->
 <!-- Main -->
 <div id="main">
-    <div id="content" class="container">
+
+    <div id="content1">
+
         <section>
             <header>
                 <h2>Artículos</h2>
                 <span class="byline"></span>
             </header>
             <p></p>
-            <article class="button" style="background: burlywood; width: 80%">
-                  <h1 style="font-size: 20px">Google Chrome</h1>
+            <article class="button" style="background-color:lightgrey; width: 97%">
+                  <h1 style="font-size: 20px"><strong>Google Chrome</strong></h1>
                 <div><span style="float:left; padding: 15px;"><img src="images/logoMeca.jpg"
-                                                                   style="width: 60px;height: 60px"/></span>
+                                                                   style="width: 80px;height: 90px"/></span>
                       <p style="text-align: justify">Google Chrome is a free, open-source web browser developed by
                         Google, released in 2008.
                         dadsdasdasddddddddddddddddddddddddddddddddddddddddddddddddd
@@ -66,10 +68,10 @@
                 </div>
                 <!--<div><span style="float:right">texto a la derecha</span>texto a la izquierda</div>-->
             </article>
-            <article class="button" style="background: burlywood; width: 80%">
-                  <h1 style="font-size: 20px">Google Chrome</h1>
+            <article class="button" style="background: lightgrey; width: 97%">
+                  <h1 style="font-size: 20px"><strong>Google Chrome</strong></h1>
                 <div><span style="float:left; padding: 15px;"><img src="images/logoMeca.jpg"
-                                                                   style="width: 60px;height: 60px"/></span>
+                                                                   style="width: 80px;height: 90px"/></span>
                       <p style="text-align: justify">Google Chrome is a free, open-source web browser developed by
                         Google, released in 2008.
                         dadsdasdasddddddddddddddddddddddddddddddddddddddddddddddddd
@@ -80,39 +82,37 @@
                 </div>
                 <!--<div><span style="float:right">texto a la derecha</span>texto a la izquierda</div>-->
             </article>
-
-            <p   style="margin:0px 450px "><a href="#">Ver más</a> </p>
+            <p   style="margin-top: -20px "><a href="#" style="color: black">Ver más</a> </p>
 
         </section>
+        <hr/>
         <section>
             <header>
-                <h2>Noticias</h2>
+                <h2 style="margin-top: 10px">Noticias</h2>
                 <span class="byline"></span>
             </header>
-            <table>
-           <td> <article class="button" style="height: 450px;width: 400px;background: white">
-                <img src="images/header.jpg" style="width: 100%;height: 40%; position: static;z-index: -10"/>
-
-                <p class="button1"
-                   style="height: 70%;width: 80%;background: white; border-style: solid; border-color: black; color: darkblue;text-align: justify;transform:translateY(-20%)">
-                    sfsdfsdfs dfsdfsdfdsfdfdf sdfsdfdfa sdfsdf df sdfdf dsf sdf sdf sdfsdfa as fsdf sdf
-                    sd fs sdf sdf gsfgsdfgf fgs fgdfg sf sfgsfg sfgs dfg sfg s </p>
-            </article> </td>
-                <br/>
-                <td> <article class="button" style="height: 450px;width: 400px;background: white">
+            <table style="align-content: center; margin-left: -40px">
+                <!--<td style="visibility: hidden"><article><p>aaaaaaaaaaaaaaa</p></article> </td>-->
+                <td> <article class="button" style="height: 450px;width: 400px;background: none">
                     <img src="images/header.jpg" style="width: 100%;height: 40%; position: static;z-index: -10"/>
 
-                    <p class="button1"
-                       style="height: 70%;width: 80%;background: white; border-style: solid; border-color: black; color: darkblue;text-align: justify;transform:translateY(-20%)">
+                    <p class="button1">
                         sfsdfsdfs dfsdfsdfdsfdfdf sdfsdfdfa sdfsdf df sdfdf dsf sdf sdf sdfsdfa as fsdf sdf
                         sd fs sdf sdf gsfgsdfgf fgs fgdfg sf sfgsfg sfgs dfg sfg s </p>
                 </article> </td>
-                <br/>
-                <td> <article class="button" style="height: 450px;width: 400px;background: white">
+
+                <td> <article class="button" style="height: 450px;width: 400px;background: none">
                     <img src="images/header.jpg" style="width: 100%;height: 40%; position: static;z-index: -10"/>
 
-                    <p class="button1"
-                       style="height: 70%;width: 80%;background: white; border-style: solid; border-color: black; color: darkblue;text-align: justify;transform:translateY(-20%)">
+                    <p class="button1">
+                        sfsdfsdfs dfsdfsdfdsfdfdf sdfsdfdfa sdfsdf df sdfdf dsf sdf sdf sdfsdfa as fsdf sdf
+                        sd fs sdf sdf gsfgsdfgf fgs fgdfg sf sfgsfg sfgs dfg sfg s </p>
+                </article> </td>
+
+                <td> <article class="button" style="height: 450px;width: 400px;background: none">
+                    <img src="images/header.jpg" style="width: 100%;height: 40%; position: static;z-index: -10"/>
+
+                    <p class="button1">
                         sfsdfsdfs dfsdfsdfdsfdfdf sdfsdfdfa sdfsdf df sdfdf dsf sdf sdf sdfsdfa as fsdf sdf
                         sd fs sdf sdf gsfgsdfgf fgs fgdfg sf sfgsfg sfgs dfg sfg s </p>
                 </article> </td>
