--- a/AcercaDe.html
+++ b/AcercaDe.html
@@ -8,15 +8,8 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <link rel="shortcut icon" href="images/chip2.ico"/>
-    <!--nuevas cosas agregadas-->
-    <link rel="stylesheet" href="css/nivo-slider.css" type="text/css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
-    <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        $(window).on('lload', function() {
-            $('#slider').nivoSlider();
-        });
-    </script>
+    <!--sdsdsd-->
+
 <!--hasta aqui se modifico cosas-->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
     <script src="js/skel.min.js"></script>
@@ -126,23 +119,23 @@
                 automatizar los procesos internos. Se desempeña como director de proyecto, gerente, jefe,
                 supervisor, consultor, investigador.</p>
         </section>
+        <section>
+
+                <div class="container">
+                    <div class="slider">
+
+                        <img src="images/1.jpg"/>
+                            <img src="images/2.jpg"/>
+                            <img src="images/3.jpg"/>
+                            <img src="images/4.jpg"/>
+
+                    </div>
+                </div>
+
+        </section>
     </div>
 </div>
-<!--<div class="slider">-->
-    <!--<ul>-->
-        <!--<li><img src="images/prueba3.jpg"></li>-->
-        <!--<li><img src="images/prueba1.jpg"></li>-->
-        <!--<li><img src="images/prueba2.jpg"></li>-->
-        <!--<li><img src="images/prueba4.jpg"></li>-->
-    <!--</ul>-->
-<!--</div>-->
-<!--Slider-->
-<div id="slider" class="nivoSlider">
-    <img src="images/1.jpg" alt="" />
-    <img src="images/3.jpg" alt="" title="#htmlcaption" />
-    <img src="images/4.jpg" alt="" title="This is an example of a caption" />
-    <img src="images/2.jpg" alt="" />
-</div>
+
 <!-- Footer -->
 <div id="footer">
     <div class="container">
