Se agrego el slider

--- a/AcercaDe.html
+++ b/AcercaDe.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="images/chip2.ico"/>
     <!--sdsdsd-->
 
-<!--hasta aqui se modifico cosas-->
+    <!--hasta aqui se modifico cosas-->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
     <script src="js/skel.min.js"></script>
     <script src="js/skel-panels.min.js"></script>
@@ -30,7 +30,7 @@
 <!-- Header -->
 <div id="header">
     <img id="foto" src="images/header.jpg"
-         >
+    >
     <div id="nav-wrapper">
         <!-- Nav -->
         <nav id="nav">
@@ -73,10 +73,13 @@
             <h2>Acerca de nosotros</h2>
         </header>
         <p style="font-size: 20px;color: lightslategray">
-            La carrera de <strong>Ingeniería Mecatrónica</strong> en la Universidad Católica "San Pablo" fue inaugurada el año 2015 en la ciudad de Santa Cruz.
-            La visión de la Universidad Católica "San Pablo" con nuestra carrera es la de formar profesionales de alto nivel, capaces de contribuir al bienestar de la sociedad competente, creativa e íntegra.
+            La carrera de <strong>Ingeniería Mecatrónica</strong> en la Universidad Católica "San Pablo" fue inaugurada
+            el año 2015 en la ciudad de Santa Cruz.
+            La visión de la Universidad Católica "San Pablo" con nuestra carrera es la de formar profesionales de alto
+            nivel, capaces de contribuir al bienestar de la sociedad competente, creativa e íntegra.
 
-            Como sociedad buscamos constantemente mejorar nuestra formación profesional, incentivar la investigación y desarrollar la capacidad de trabajo colectivo.
+            Como sociedad buscamos constantemente mejorar nuestra formación profesional, incentivar la investigación y
+            desarrollar la capacidad de trabajo colectivo.
 
         </p>
         <br/>
@@ -115,22 +118,42 @@
         <section>
             </br>
             <header><h2>¿Dónde podrías trabajar cuando egreses?</h2></header>
-            <p style="font-size: 20px;color: lightslategray">En empresas industriales de cualquier naturaleza, empresas productoras y/o de servicios donde se requiera
+            <p style="font-size: 20px;color: lightslategray">En empresas industriales de cualquier naturaleza, empresas
+                productoras y/o de servicios donde se requiera
                 automatizar los procesos internos. Se desempeña como director de proyecto, gerente, jefe,
                 supervisor, consultor, investigador.</p>
         </section>
         <section>
+            <div id="captioned-gallery">
+                <figure class="slider">
+                    <figure>
+                        <img src="images/1.jpg" alt>
+                        <figcaption>GABS</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/2.jpg" alt>
+                        <figcaption>GABS</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/3.jpg" alt>
+                        <figcaption>GABS</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/4.jpg" alt>
+                        <figcaption>GABS</figcaption>
+                    </figure>
+                </figure>
+            </div>
+            <!--<div class="container">-->
+            <!--<div class="slider">-->
 
-                <div class="container">
-                    <div class="slider">
+            <!--<img src="images/1.jpg"/>-->
+            <!--<img src="images/2.jpg"/>-->
+            <!--<img src="images/3.jpg"/>-->
+            <!--<img src="images/4.jpg"/>-->
 
-                        <img src="images/1.jpg"/>
-                            <img src="images/2.jpg"/>
-                            <img src="images/3.jpg"/>
-                            <img src="images/4.jpg"/>
-
-                    </div>
-                </div>
+            <!--</div>-->
+            <!--</div>-->
 
         </section>
     </div>
