se hizo la parte de las actividades

--- a/Campus.html
+++ b/Campus.html
@@ -1,97 +1,115 @@
 ﻿<!DOCTYPE HTML>
 <html>
-	<head>
-		<title>campus</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-        <link rel="shortcut icon" href="images/chip2.ico" />
-		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-panels.min.js"></script>
-		<script src="js/init.js"></script>
-        <script src="https://use.fontawesome.com/ae4bcc040f.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
-		</noscript>
-	</head>
-	<body>
+<head>
+    <title>campus</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="description" content=""/>
+    <meta name="keywords" content=""/>
+    <link rel="shortcut icon" href="images/chip2.ico"/>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/skel-panels.min.js"></script>
+    <script src="js/init.js"></script>
+    <script src="https://use.fontawesome.com/ae4bcc040f.js"></script>
+    <noscript>
+        <link rel="stylesheet" href="css/skel-noscript.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="css/style-desktop.css"/>
+    </noscript>
+</head>
+<body>
 
-        <!-- Header -->
-        <div id="header" >
-            <img id="foto" src="images/header.jpg"/>
-            <div id="nav-wrapper">
-                <!-- Nav -->
-                <nav id="nav">
-                    <ul>
-                        <li class="active"><a href="AcercaDe.html">Acerca de nosotros</a></li>
-                        <li><a href="Noticias.html">Noticias</a></li>
-                        <li><a href="Home.html"><img src="images/logoMeca.jpg" alt="IMT" height="70" width="60"> </a></li>
-                        <li><a href="Campus.html">Comunidad</a></li>
-                        <li><a href="Actividades.html">Actividades</a></li>
-                    </ul>
-                </nav>
-            </div>
-
-
+<!-- Header -->
+<div id="header">
+    <img id="foto" src="images/3.jpg"/>
+    <div id="nav-wrapper">
+        <!-- Nav -->
+        <nav id="nav">
+            <ul>
+                <li class="active"><a href="AcercaDe.html">Acerca de nosotros</a></li>
+                <li><a href="Noticias.html">Noticias</a></li>
+                <li><a href="Home.html"><img src="images/logoMeca.jpg" alt="IMT" height="70" width="60"> </a></li>
+                <li><a href="Campus.html">Comunidad</a></li>
+                <li><a href="Actividades.html">Actividades</a></li>
+            </ul>
+        </nav>
+    </div>
 
 
-        <!-- Header -->
-        <!-- Main -->
+    <!-- Header -->
+    <!-- Main -->
+
+</div>
+<!--<div id="main" style="background: none">-->
+<!--<div id="content" class="container">-->
+
+<div class="art">
+    <div class="caja1"><img src="images/header.jpg" style="float: left;width: 100%;height:100%"></div>
+    <div class="caja2">
+        <div class="center" style="margin-left: 285px">
+            <p style="margin-top: -130px ">Revista</p>
+            <button style="background-color: black;color: white; padding: 15px 13px 20px 13px;"><a href="#"
+                                                                                                   style="color: white; font-size: 15px; ">
+                Descubrí más ></a></button>
 
         </div>
-        <!--<div id="main" style="background: none">-->
-            <!--<div id="content" class="container">-->
+    </div>
+</div>
 
-                <div id="art">
-                    <div id="caja1"> <img src="images/header.jpg"style="float: left;width: 100%;height:100%"></div>
-                    <div id="caja2">
-                        <div id="center">
-                            <p>Revista</p>
-                          <button style="background-color: black; padding: 15px 13px 20px 13px;">  <a href="#" style="color: white; font-size: 15px; "> Descubrí más ></a> </button>
+<div class="art1" style="background-color: black; color: white">
+    <div class="caja3"><img src="images/2.jpg" style="float: right;width: 100%;height:100%"></div>
+    <div class="caja4">
+        <div class="center1"style="margin-left: 170px">
+            <p style="margin-top: -230px">Centro </p>
+            <p style="margin-top: -37px;margin-bottom: 40px">Interno</p>
+            <button style="background-color: white; padding: 15px 13px 20px 13px; "><a href="#"
+                                                                                      style="color: black; font-size: 15px ">
+                Descubrí más ></a></button>
 
-                        </div>
-                    </div>
-                    </div>
-
-        <div id="art1">
-            <div id="caja3"> <img src="images/2.jpg"style="float: right;width: 100%;height:100%"></div>
-            <div id="caja4">
-                <div id="center1" >
-                    <p>Centro Interno</p>
-                    <button style="background-color: black; padding: 15px 13px 20px 13px;">  <a href="#" style="color: white; font-size: 15px; "> Descubrí más ></a> </button>
-
-                </div>
-            </div>
         </div>
-            <!--</div>-->
-        
-        <!-- /Main -->
-        <!-- Footer -->
-        <div id="footer">
-            <div class="container">
-                <section>
-                    <header>
-                        <h2>Contáctanos </h2>
-                    </header>
-                    <ul class="contact">
-                        <li class="active"><a href="https://www.facebook.com/mecatronicaUCBscz/" class="fa fa-facebook" target="_blank"><span>Facebook</span></a></li>
-                        <li><a href="https://www.youtube.com/channel/UCidrA3C3RFm_H1Ar8CylKvQ" class="fa fa-youtube" target="_blank"><span>youtube</span></a></li>
-                    </ul>
-                </section>
-            </div>
+    </div>
+</div>
+<div class="art">
+    <div class="caja1"><img src="images/4.jpg" style="float: left;width: 100%;height:100%"></div>
+    <div class="caja2">
+        <div class="center"style="margin-left: 270px">
+            <p style="margin-top: 670px">SCEMEC</p>
+            <button style="background-color: black;color: white; padding: 15px 13px 20px 13px;"><a href="#"
+                                                                                                   style="color: white; font-size: 15px; ">
+                Descubrí más ></a></button>
+
         </div>
-        <!-- /Footer -->
-        <!-- Copyright -->
-        <div id="copyright">
-            <div class="container">
-                Design: HOUSTON TECH
-            </div>
-        </div>
+    </div>
+</div>
+
+<!--</div>-->
+
+<!-- /Main -->
+<!-- Footer -->
+<div id="footer">
+    <div class="container">
+        <section>
+            <header>
+                <h2>Contáctanos </h2>
+            </header>
+            <ul class="contact">
+                <li class="active"><a href="https://www.facebook.com/mecatronicaUCBscz/" class="fa fa-facebook"
+                                      target="_blank"><span>Facebook</span></a></li>
+                <li><a href="https://www.youtube.com/channel/UCidrA3C3RFm_H1Ar8CylKvQ" class="fa fa-youtube"
+                       target="_blank"><span>youtube</span></a></li>
+            </ul>
+        </section>
+    </div>
+</div>
+<!-- /Footer -->
+<!-- Copyright -->
+<div id="copyright">
+    <div class="container">
+        Design: HOUSTON TECH
+    </div>
+</div>
 
 
-	</body>
+</body>
 </html>
