--- a/Actividades.html
+++ b/Actividades.html
@@ -1,103 +1,180 @@
 ﻿<!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Actividades</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-        <link rel="shortcut icon" href="images/chip2.ico" />
-		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-panels.min.js"></script>
-		<script src="js/init.js"></script>
-        <script src="https://use.fontawesome.com/ae4bcc040f.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
-		</noscript>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>jQuery UI Datepicker - Default functionality</title>
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <link rel="stylesheet" href="/resources/demos/style.css">
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <script>
-            $(function () {
-                $("#datepicker").datepicker();
-            });
-        </script>
-	</head>
-	<body>
+<head>
+    <title>Actividades</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="description" content=""/>
+    <meta name="keywords" content=""/>
+    <link rel="shortcut icon" href="images/chip2.ico"/>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/skel.min.js"></script>
+    <script src="js/skel-panels.min.js"></script>
+    <script src="js/init.js"></script>
+    <script src="https://use.fontawesome.com/ae4bcc040f.js"></script>
+    <noscript>
+        <link rel="stylesheet" href="css/skel-noscript.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="css/style-desktop.css"/>
+    </noscript>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>jQuery UI Datepicker - Default functionality</title>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+        $(function () {
+            $("#datepicker").datepicker();
+        });
+    </script>
+</head>
+<body>
 
-	<!-- Header -->
-		<div id="header">
-			<div id="nav-wrapper"> 
-				<!-- Nav -->
-				<nav id="nav">
-					<ul>
-                        <li class="active"><a href="AcercaDe.html">Acerca de nosotros</a></li>
-                        <li><a href="Noticias.html">Noticias</a></li>
-                        <li><a href="Home.html"><img src="images/logoMeca.jpg" alt="IMT" height="70" width="60"> </a></li>
-                        <li><a href="Campus.html">Comunidad</a></li>
-                        <li><a href="Actividades.html">Actividades</a></li>
-					</ul>
-				</nav>
-			</div>
-			<div class="container"> 
-				
-				<!-- Logo -->
-				<div id="logo">
-					<h1><a href="#"></a></h1>
-					<span class="tag"></span>
-                   
-				</div>
-			</div>
-		</div>
-	<!-- Header --> 
+<!-- Header -->
+<div id="header">
+    <div id="nav-wrapper">
+        <!-- Nav -->
+        <nav id="nav">
+            <ul>
+                <li class="active"><a href="AcercaDe.html">Acerca de nosotros</a></li>
+                <li><a href="Noticias.html">Noticias</a></li>
+                <li><a href="Home.html"><img src="images/logoMeca.jpg" alt="IMT" height="70" width="60"> </a></li>
+                <li><a href="Campus.html">Comunidad</a></li>
+                <li><a href="Actividades.html">Actividades</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="container">
 
-	<!-- Main -->
-		<div id="main">
-			<div id="content" class="container">
-				<section>
-					<header>
-						<h2></h2>
-                        <p>
-                            Date: <input type="text"id="datepicker">
-                        </p>
-						<span class="byline"></span>
-					</header>
-					<p></p>
-					<p></p>
-                </section>
-			</div>
-		</div>
-	<!-- /Main -->
-	<!-- Footer -->
-		<div id="footer">
-			<div class="container">
-				<section>
-					<header>
-						<h2>Contáctanos </h2>
-					</header>
-					<ul class="contact">
-						<li class="active"><a href="https://www.facebook.com/mecatronicaUCBscz/" class="fa fa-facebook"target="_blank"><span>Facebook</span></a></li>
-						<li><a href="https://www.youtube.com/channel/UCidrA3C3RFm_H1Ar8CylKvQ" class="fa fa-youtube"target="_blank"><span>youtube</span></a></li>
-					</ul>
-				</section>
-			</div>
-		</div>
-	<!-- /Footer -->
+        <!-- Logo -->
+        <div id="logo">
+            <h1><a href="#"></a></h1>
+            <span class="tag"></span>
 
-	<!-- Copyright -->
-		<div id="copyright">
-			<div class="container">
-				Design: HOUSTON TECH  
-			</div>
-		</div>
+        </div>
+    </div>
+</div>
+<!-- Header -->
+
+<!-- Main -->
+<div id="main">
+    <table>
+
+        <td>
+            <article class="calendarioI">
+                <i class="fa fa-calendar-o fa-5x" style="float: left"> </i>
+
+                <span class="span1">17</span>
+                <span class="span2">Agosto</span>
+                <i style="margin-left: 50px" class="fa fa-clock-o fa-lg"> 2:30pm</i>
+                <i style="margin-left: 80px"class="fa fa-map-marker fa-lg"> Campus km9</i>
+                <h2 style="text-align: center"> Un día en la Católica</h2>
+
+                </article>
+        </td>
+        <td>
+            <article class="calendarioD">
+                <i class="fa fa-calendar-o fa-5x" style="float: left"> </i>
+
+                <span class="span1">19</span>
+                <span class="span2">Agosto</span>
+                <i style="margin-left: 50px" class="fa fa-clock-o fa-lg"> 12:30pm</i>
+                <i style="margin-left: 80px"class="fa fa-map-marker fa-lg"> Cainco</i>
+                <h2 style="text-align: center"> Feria</h2>
+            </article>
+        </td>
+<tr>
+    <td>
+        <br/>
+        <br/>
+    </td>
+</tr>
+        <tr>
+            <td>
+                <article class="calendarioI">
+                    <i class="fa fa-calendar-o fa-5x" style="float: left"> </i>
+
+                    <span class="span1">17</span>
+                    <span class="span2">Agosto</span>
+                    <i style="margin-left: 50px" class="fa fa-clock-o fa-lg"> 2:30pm</i>
+                    <i style="margin-left: 80px"class="fa fa-map-marker fa-lg"> Campus km9</i>
+                    <h2 style="text-align: center"> Un día en la Católica</h2>
+
+                </article>
+            </td>
+            <td>
+                <article class="calendarioD">
+                    <i class="fa fa-calendar-o fa-5x" style="float: left"> </i>
+
+                    <span class="span1">19</span>
+                    <span class="span2">Agosto</span>
+                    <i style="margin-left: 50px" class="fa fa-clock-o fa-lg"> 12:30pm</i>
+                    <i style="margin-left: 80px"class="fa fa-map-marker fa-lg"> Cainco</i>
+                    <h2 style="text-align: center"> Feria</h2>
+                </article>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <br/>
+                <br/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <article class="calendarioI">
+                    <i class="fa fa-calendar-o fa-5x" style="float: left"> </i>
+
+                    <span class="span1">17</span>
+                    <span class="span2">Agosto</span>
+                    <i style="margin-left: 50px" class="fa fa-clock-o fa-lg"> 2:30pm</i>
+                    <i style="margin-left: 80px"class="fa fa-map-marker fa-lg"> Campus km9</i>
+                    <h2 style="text-align: center"> Un día en la Católica</h2>
+
+                </article>
+            </td>
+            <td>
+                <article class="calendarioD">
+                    <i class="fa fa-calendar-o fa-5x" style="float: left"> </i>
+
+                    <span class="span1">19</span>
+                    <span class="span2">Agosto</span>
+                    <i style="margin-left: 50px" class="fa fa-clock-o fa-lg"> 12:30pm</i>
+                    <i style="margin-left: 80px"class="fa fa-map-marker fa-lg"> Cainco</i>
+                    <h2 style="text-align: center"> Feria</h2>
+                </article>
+            </td>
+        </tr>
+    </table>
+</div>
+<!-- /Main -->
+<!-- Footer -->
+<div id="footer">
+    <div class="container">
+        <section>
+            <header>
+                <h2>Contáctanos </h2>
+            </header>
+            <ul class="contact">
+                <li class="active"><a href="https://www.facebook.com/mecatronicaUCBscz/" class="fa fa-facebook"
+                                      target="_blank"><span>Facebook</span></a></li>
+                <li><a href="https://www.youtube.com/channel/UCidrA3C3RFm_H1Ar8CylKvQ" class="fa fa-youtube"
+                       target="_blank"><span>youtube</span></a></li>
+            </ul>
+        </section>
+    </div>
+</div>
+<!-- /Footer -->
+
+<!-- Copyright -->
+<div id="copyright">
+    <div class="container">
+        Design: HOUSTON TECH
+    </div>
+</div>
 
 
-	</body>
+</body>
 </html>
